[package]
name = "muzzman-module-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
overflow-checks = false
debug = false
strip = "debuginfo"
lto = true
panic = "unwind"
debug-assertions = false
codegen-units = 128

[lib]
crate-type = ["cdylib"]

[dependencies]
muzzman-lib= "0.1.0" 
bytes-kman = {version = "0.1.7"}
socket2 = "0.4.7"
relay-man = "0.1.0"
whoami = "1.2.3"
rand = "0.8.5"
hex = "0.4.3"
